refactor: heavy changes

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "web3p/web3.php": "dev-master",
         "supabase/supabase-php": "^0.0.1",
         "vlucas/phpdotenv": "^5.5",
-        "rafaelwendel/phpsupabase": "^0.0.8"
+        "rafaelwendel/phpsupabase": "^0.0.8",
+        "supabase/postgrest-php": "^0.0.4"
     }
 }
